# Find-Professor

./: LICENSE  New.py  README.md  SECURITY.md  professor_finder.py  pyproject.toml  requirements.txt
.github/workflows/: pyproject.toml  python-publish.yml
