[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-package-name"
version = "0.1.0"
description = "Your package description here"
authors = [
  { name="Your Name", email="your@email.com" }
]
dependencies = []
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
